--- a/app/views/diets/_meal_fields.html.erb
+++ b/app/views/diets/_meal_fields.html.erb
@@ -2,7 +2,8 @@
   <div class="md:flex mb-4">
     <div class="md:flex-1 md:pr-3">
       <label class="block uppercase tracking-wide text-charcoal-darker text-xs font-bold">Type</label>
-      <%= f.text_field :meal_type, class: "w-full p-4 border-0" %>
+      <%= f.collection_select(:meal_type_id, @meal_types, :id, :value) %>
+
     </div>
     <div class="md:flex-1 md:pr-3">
       <label class="block uppercase tracking-wide text-charcoal-darker text-xs font-bold">Time</label>
